Ink Drop is visibly shown when right-clicking and dragging on the toolbar custom button. According to the report, the button should be non-reactive and show no visible signs of being clicked on.

BUG=617764

Review-Url: https://codereview.chromium.org/2042883003
Cr-Commit-Position: refs/heads/master@{#398316}

Former-commit-id: fa592d3f01a5e00e8de1851b93ebea6593f4c7c3